--- a/_SCSS/bestilBillet.scss
+++ b/_SCSS/bestilBillet.scss
@@ -1,50 +1,164 @@
 //bestil Billet Accordion
+h2{
+    text-align: center;
+    
+}
 #Main-background{
     #top-text{
         text-align: center;
-        padding-top: 50px;
-        h2{
-            font-size: 48px;
-            padding-bottom: 20px;
-        }
         p{
-            padding-bottom: 30px;
+            padding-bottom: 5%;
         }
     }
-    
+
     .Movie{
-        max-width: 1081px;
+        width: 80%;
         margin: 0 auto;
-        padding-bottom: 50px;
-        a{
-            background-color: white;
-            color: black;
-            padding: 10px 20px;
-            border: 1px solid black;
+        padding-bottom: 5%;
+        .flex-Movie{
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 5px;
+            border-bottom: 2px solid #cfcfcf;
+            .btn{
+                width: 10%;
+                &:active{
+                    background-color: black;
+                    color: white;
+                }
+            }
         }
-        p{
-            color: white;
+        .hidden-msg{
+            padding-top: 20px;
+            padding-bottom: 20px;
+            display: none;
+            &.active{
+                display: block;
+            }
+            p{
+                color: white;
+                font-size: 1.2vw;
+                padding-bottom: 2%;
+            }
+            .billetBtn{
+                padding: 1%;
+                &:active{
+                    background-color: black;
+                    color: white;
+                }
+                a{
+                    color: black;
+                    &:active{
+                        color: white;
+                    }
+                }
+            }
         }
     }
-    .hidden-msg{
-        padding-top: 20px;
-        padding-bottom: 20px;
-        display: none;
-    }   
-    .flex-Movie{
+
+
+
+
+}
+//valg af sæder
+#test{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 25vw;
+    margin: 0;
+    color: #fff;
+    .movie-container{
+        margin: 20px 0;
+        #movie{
+            background-color: #fff;
+            border: 0;
+            border-radius: 5px;
+            margin-left: 10px;
+            padding: 5px;
+            // appearance: none;
+        }
+    }
+    .showcase{
+        background: rgba(0, 0, 0, 0.1);
+        padding: 5px 10px;
+        border-radius: 5px;
+        color: #777;
         display: flex;
         justify-content: space-between;
-        padding-bottom: 5px;
-        border-bottom: 2px solid #cfcfcf;
+        li{ // N/A optaget og valgt
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 10px;
+            small{
+                margin-left: 2px;
+            }
+        }
+        .seat{
+            background: #444451;
+            height: 22px;// det her ændrer de 3 øverste sæder
+            width: 25px;//det her ændrer de 3 øverste sæder
+            margin: 3px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            &:not(.occupied):hover{
+                cursor: default;
+                transform: scale(1);
+            }
+        }
+        .selected{
+            background: #6feaf6;
+        }
+        .seat.occupied{
+            background: #fff;
+        }
     }
-    
-    .btn:active{
-        background-color: black;
-        color: white;
+    .container{
+       perspective: 1000px;
+       margin-bottom: 30px;
+       .screen{
+        background:white;
+        height: 70px;
+        width: 100%;
+        margin: 15px 0;
+        transform: rotateX(-45deg);
+        box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
+       }
+       .row{
+            display: flex;
+           .seat{
+               background: #444451;
+               height: 22px; //det her ændrer alle andre sæder
+               width: 25px;//det her ændrer alle andre sæder
+               margin: 3px;
+               border-top-left-radius: 10px;
+               border-top-right-radius: 10px;
+               &:nth-last-of-type(3){//her jeg laver den lille gang imellem sæderne
+                   margin-right: 18px;
+               }
+               &:nth-last-of-type(6){//her jeg laver den lille gang imellem sæderne
+                   margin-left: 18px;
+               }
+               &:not(.occupied):hover{
+                   cursor: pointer;
+                   transform: scale(1.2);
+               }
+           }
+           .seat.selected{
+               background: #6feaf6; // virker ikke at neste prøv med &
+           }
+           .occupied{
+               background: #fff; //virker ikke at neste
+           }
+       }
     }
-    
-    .hidden-msg.active{
-        display: block;
+    .text{
+        margin: 5px 0;
+        span{
+            color: #6feaf6
+        }
     }
 }
 
@@ -54,131 +168,75 @@
 
 //bestil billet betalning
 #Payment{
-    max-width: 100vw;
-    height: 100vh;
-    margin: 0 auto;
-    h2{
-        font-size: 3vw;
-        text-align: center;
-    }
- 
+    padding-top: 10%;
     figure{
-        display: flex;
-        max-width: 70vw;
-        margin: 0 auto;
-        padding-top: 100px;
-        gap: 100px;
-    }
-   
-    form{
-        padding-top: 40px;
         display: grid;
-        grid-template-columns: 1fr 9fr 19;
-        grid-template-areas:
-        "Navn Navn Navn"
-        "Tlf Krtnr Krtnr"
-        "Email CVV Date"
-        "MainBtn MainBtn MainBtn"
-         ;
-         grid-gap: 5px;
-         width: 50%;
-         margin: 0 auto;
-         padding-bottom: 50px;
-    }
- 
-    .Navn{
-        grid-area: Navn;
- 
-        #name{
-            width: 33.1vw;
-            margin-bottom: 30px;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
- 
+        grid-template-columns: 1fr 1fr; 
+        gap: 1%;
+        img{
+            width: 100%;
         }
+        figcaption{
+            form{
+                width: 90%;
+                padding-top: 5%;
+                input{
+                    padding-right: 50px;
+                    width: 100%;
+                    padding: 10px 0 10px;
+                    font-size: 1.3vw;
+                }
+                div{
+                    padding-bottom: 6%;
+                }
+                textarea{
+                    width: 100%;
+                    padding: 10px 0 50px;
+                    font-size: 1.3vw;
+                }
+                ::placeholder{
+                    font-size: 1.3vw;
+                    color: black;
+                }
+                #grid-two{
+                    gap: 1%;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                }
+                #grid-three{
+                    gap: 1%;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                }
+                .MainBtn{
+                    padding: 10px 0 10px;
+                    #SndBtn{
+                        &:active{
+                            background: black;
+                            color: white;
+                        }
+                    }
+                    button[type="submit"]{
+                        background-color: #ccc;
+                        font-size: 1.3vw;
+                        cursor: pointer;
+                        width: 10%;
+                        margin-right: 1%;
+                        padding: 1%;
+                        width: 100%;
+                    }
+                }
+                .error-wrapper{
+                    grid-area: error;
+                    width: 100%;
+                    text-align: center;
+                }
+            }  
+        }   
     }
-    
-    .Tlf{
-        grid-area: Tlf;
- 
-        #Telfnumber{
-            width: 12vw;
-            margin-bottom: 30px;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
- 
-        }
-    }
-    
-    .Krtnr{
-        grid-area: Krtnr;
- 
-        #Kortnumber{
-            width: 20.7vw;
-            margin-bottom: 30px;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
- 
-        }
-    }
-    
-    .Email{
-        grid-area: Email;
- 
-        #email{
-            width: 12vw;
-            margin-bottom: 30px;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
- 
-        }
-    }
-    
-    .CVV{
-        grid-area: CVV;
- 
-        #CVVnumber{
-            width: 5.5vw;
-            margin-bottom: 30px;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
- 
-        }
-    }
-    
-    .Date{
-        grid-area: Date;
- 
-        #dato{
-            width: 14.7vw;
-            margin-bottom: 90px;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
-        }
-    }
- 
-    .MainBtn{
-        grid-area: MainBtn;
- 
-        #SndBtn{
-            width: 33.1vw;
-            padding: 10px 20px;
-            border: 2px solid black;
-            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
-            margin-bottom: 20px;
-            cursor: pointer;
-        }
-    
-    }
- 
-    #FlmImg{
-        height: 43vh;
-        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4), 0 12px 40px 0 rgba(0, 0, 0, 0.8);
-    }
-}
+}   
+
+
+
+
+
