--- a/_SCSS/film.scss
+++ b/_SCSS/film.scss
@@ -1,6 +1,5 @@
  //Forside Section One
  #TopMovies{
-    margin-top: 1vw;
     figure{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -8,9 +7,6 @@
     }
     figcaption{
         position: relative;
-        h2{
-            margin-bottom: 1vw;
-        }
         p{
             line-height: 2.2vw;
             margin-bottom: .7vw;
@@ -19,13 +15,16 @@
             margin-bottom: 1.4vw;
         }
         button{
-            height: 2.5vw;
-            width: 7vw;
-            background-color: black;
-            padding: .5vw;
-            a{
+            padding: 2%;
+            &:active{
+                background-color: black;
                 color: white;
-                font-size: 1vw; 
+            }
+            a{
+                color: black;
+                &:active{
+                    color: white;
+                }
             }
         }
     }
