--- a/assets/css/arrangementer.css
+++ b/assets/css/arrangementer.css
@@ -40,6 +40,11 @@
   cursor: pointer;
 }
 
+#gridBtn .spBtn:active {
+  background: black;
+  color: white;
+}
+
 #gridBtn article {
   -webkit-box-align: center;
       -ms-flex-align: center;
