--- a/assets/css/film.css
+++ b/assets/css/film.css
@@ -1,7 +1,3 @@
-#TopMovies {
-  margin-top: 1vw;
-}
-
 #TopMovies figure {
   display: -ms-grid;
   display: grid;
@@ -14,10 +10,6 @@
   position: relative;
 }
 
-#TopMovies figcaption h2 {
-  margin-bottom: 1vw;
-}
-
 #TopMovies figcaption p {
   line-height: 2.2vw;
   margin-bottom: .7vw;
@@ -28,15 +20,20 @@
 }
 
 #TopMovies figcaption button {
-  height: 2.5vw;
-  width: 7vw;
+  padding: 2%;
+}
+
+#TopMovies figcaption button:active {
   background-color: black;
-  padding: .5vw;
+  color: white;
 }
 
 #TopMovies figcaption button a {
+  color: black;
+}
+
+#TopMovies figcaption button a:active {
   color: white;
-  font-size: 1vw;
 }
 
 #TopMovies #topMoviesWrapper {
