--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -24,12 +24,19 @@ body h2 {
   color: #f2545b;
   text-shadow: 2px 2px black;
   font-size: 4vw;
+  padding-bottom: 3%;
 }
 
 body h3 {
   color: #5f021f;
   text-shadow: 2px 2px black;
   font-size: 2.5vw;
+}
+
+body h4 {
+  color: #5f021f;
+  text-shadow: 2px 2px black;
+  font-size: 1.5vw;
 }
 
 body h6 {
@@ -56,14 +63,14 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 100vh;
+  height: 90vh;
 }
 
 header svg {
   width: 10%;
   z-index: 4;
   position: relative;
-  top: -41%;
+  top: -39%;
 }
 
 header svg path {
@@ -71,7 +78,7 @@ header svg path {
 }
 
 header .nav-main {
-  z-index: 5;
+  z-index: 1;
 }
 
 header .nav-main ul {
@@ -188,7 +195,7 @@ header .nav-main ul .dropdown:hover .dropdown-content {
 
 #slider {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   position: absolute;
 }
 
