--- a/_SCSS/arrangementer.scss
+++ b/_SCSS/arrangementer.scss
@@ -16,42 +16,35 @@
     }
 }
 #specialPerformances{
+    height: 70vh;
     h2{
         text-align: center;
     }
-    // #gridBtn{
-    //     display: grid;
-    //     grid-template-columns: 1fr 1fr 1fr 1fr;
-    // }
-}
-
-
-
-#gridBtn{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    height: 50vh;
-    gap: 3%;
-    .spBtn {
-        width: 100%;
-        font-size: 1vw;
-        padding: 1% 2% 1%;
-        // color: whitesmoke;
-        font-weight: 700;
-        &:hover {
-            cursor: pointer;
+    #gridBtn{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 3%;
+        div{
+            height: 50px;
+            .spBtn {
+                width: 100%;
+                font-size: 1vw;
+                padding: 1% 2% 1%;
+                font-weight: 700;
+                &:hover {
+                    cursor: pointer;
+                }
+                &:active{
+                    background: black;
+                    color: white;
+                }
+            }
+            
         }
-        &:active{
-            background: black;
-            color: white;
-        }
-
     }
-    article {
-        align-items: center;
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height 0.2s ease-out;
+    .spWrapper {
+        padding: 1% 20%;
         width: 100%;
+        text-align: center;
     }
 }
