--- a/_SCSS/film.scss
+++ b/_SCSS/film.scss
@@ -88,7 +88,7 @@
         gap: 1vw;
         }
     #movieWrapper > div{
-        background-color: rgba(255, 255, 255, 0.8);
+        // background-color: rgba(255, 255, 255, 0.8);
         text-align: center;
         padding: 20px 0;
         img{
