--- a/assets/css/bestilBillet.css
+++ b/assets/css/bestilBillet.css
@@ -69,7 +69,7 @@ h2 {
   color: white;
 }
 
-#test {
+#seatSelection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -88,11 +88,11 @@ h2 {
   color: #fff;
 }
 
-#test .movie-container {
+#seatSelection .movie-container {
   margin: 20px 0;
 }
 
-#test .movie-container #movie {
+#seatSelection .movie-container #movie {
   background-color: #fff;
   border: 0;
   border-radius: 5px;
@@ -100,7 +100,7 @@ h2 {
   padding: 5px;
 }
 
-#test .showcase {
+#seatSelection .showcase {
   background: rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
   border-radius: 5px;
@@ -113,7 +113,7 @@ h2 {
           justify-content: space-between;
 }
 
-#test .showcase li {
+#seatSelection .showcase li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -126,11 +126,11 @@ h2 {
   margin: 0 10px;
 }
 
-#test .showcase li small {
+#seatSelection .showcase li small {
   margin-left: 2px;
 }
 
-#test .showcase .seat {
+#seatSelection .showcase .seat {
   background: #444451;
   height: 22px;
   width: 25px;
@@ -139,27 +139,27 @@ h2 {
   border-top-right-radius: 10px;
 }
 
-#test .showcase .seat:not(.occupied):hover {
+#seatSelection .showcase .seat:not(.occupied):hover {
   cursor: default;
   -webkit-transform: scale(1);
           transform: scale(1);
 }
 
-#test .showcase .selected {
+#seatSelection .showcase .selected {
   background: #6feaf6;
 }
 
-#test .showcase .seat.occupied {
+#seatSelection .showcase .seat.occupied {
   background: #fff;
 }
 
-#test .container {
+#seatSelection .container {
   -webkit-perspective: 1000px;
           perspective: 1000px;
   margin-bottom: 30px;
 }
 
-#test .container .screen {
+#seatSelection .container .screen {
   background: white;
   height: 70px;
   width: 100%;
@@ -170,13 +170,13 @@ h2 {
           box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
 }
 
-#test .container .row {
+#seatSelection .container .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#test .container .row .seat {
+#seatSelection .container .row .seat {
   background: #444451;
   height: 22px;
   width: 25px;
@@ -185,33 +185,33 @@ h2 {
   border-top-right-radius: 10px;
 }
 
-#test .container .row .seat:nth-last-of-type(3) {
+#seatSelection .container .row .seat:nth-last-of-type(3) {
   margin-right: 18px;
 }
 
-#test .container .row .seat:nth-last-of-type(6) {
+#seatSelection .container .row .seat:nth-last-of-type(6) {
   margin-left: 18px;
 }
 
-#test .container .row .seat:not(.occupied):hover {
+#seatSelection .container .row .seat:not(.occupied):hover {
   cursor: pointer;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
 
-#test .container .row .seat.selected {
+#seatSelection .container .row .seat.selected {
   background: #6feaf6;
 }
 
-#test .container .row .occupied {
+#seatSelection .container .row .occupied {
   background: #fff;
 }
 
-#test .text {
+#seatSelection .text {
   margin: 5px 0;
 }
 
-#test .text span {
+#seatSelection .text span {
   color: #6feaf6;
 }
 
