--- a/_SCSS/aboutUs.scss
+++ b/_SCSS/aboutUs.scss
@@ -16,5 +16,43 @@
     }
 }
 #aboutFaciliteter{
-    
+    display: grid;
+    justify-content: center;
+    h2{
+        text-align: center;
+        padding-bottom: 0;
+    }
+    p{
+        text-align: center;
+        padding-bottom: 6vw;
+    }
+    #figureWrapper{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 7vw;
+        figure{
+            img{
+                border-radius: 50%;
+                width: 10vw;
+                height: 10vw;
+                padding-bottom: 10px;
+            }
+            figcaption{
+                article{
+                    text-align: center;
+                    h6{
+                        padding-bottom: .5vw;
+                    }
+                    .aboutBtn{
+                        padding: 5px 10px;
+
+                        &:active{
+                            background-color: black;
+                            color: white;
+                        }
+                    }
+                }
+            }
+        }
+    }   
 }
