--- a/_SCSS/film.scss
+++ b/_SCSS/film.scss
@@ -76,7 +76,7 @@
         grid-area: g;
     }
     #movieWrapper{
-        max-width: 70%;
+        width: 70%;
         margin: auto;
         display: grid;
         grid-template-areas:
@@ -88,7 +88,6 @@
         gap: 1vw;
         }
     #movieWrapper > div{
-        // background-color: rgba(255, 255, 255, 0.8);
         text-align: center;
         padding: 20px 0;
         img{
