--- a/_SCSS/bestilBillet.scss
+++ b/_SCSS/bestilBillet.scss
@@ -87,7 +87,7 @@ h2{
         color: #777;
         display: flex;
         justify-content: space-between;
-        li{ // N/A optaget og valgt
+        li{ // Ledigt optaget og valgt
             display: flex;
             align-items: center;
             justify-content: center;
